# web2json

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  windows_setup.py
.github/workflows/: release.yml
requirements/: development.txt  production.txt
src/web2json/: __init__.py  __main__.py  cli.py
src/web2json/core/: __init__.py  export.py  extract.py  fetch.py  parse.py  pipeline.py
src/web2json/core/extractors/: __init__.py  base.py  code_extractor.py  heading_extractor.py  list_extractor.py  paragraph_extractor.py  table_extractor.py
src/web2json/core/pipeline_stages/: __init__.py  base.py  export_stage.py  extract_stage.py  fetch_stage.py  parse_stage.py  transform_stage.py
src/web2json/models/: __init__.py  content.py  document.py
src/web2json/utils/: __init__.py  errors.py  filesystem.py  memory.py  url.py
tests/: __init__.py  test_file_handler.py  test_html_parser.py  test_json_converter.py  test_url_processor.py
tests/fixtures/: sample_urls.txt
tests/fixtures/sample_pages/: article.html  blog_post.html  complex_layout.html
web2json/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
web2json/core/: __init__.py  content_extractor.py  html_parser.py  json_converter.py  url_processor.py
web2json/core/pipeline/: __init__.py  pipeline.py
web2json/core/pipeline/stages/: __init__.py  base.py  export.py  extract.py  fetch.py  parse.py  transform.py
web2json/data/: __init__.py  schemas.py
web2json/utils/: __init__.py  file_handler.py  filesystem.py  logging_config.py  pipeline_runner.py  url.py
(+5 files in other folders)
