[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "web2json"
version = "2.0.0"
description = "Web page to structured JSON converter"
authors = ["Ervins Strauhmanis"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/resoltico/web2json"
packages = [{include = "web2json", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.13.3"
aiohttp = "^3.11.15"
pydantic = "^2.11.1"
typer = "^0.15.2"
rich = "^14.0.0"
lxml = "^5.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.26.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.2"

[tool.poetry.scripts]
web2json = "web2json.cli:app"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88